service-mesh/virtual-services.yaml


# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   labels:
#   name: grafana-server
#   namespace: monitoring
# spec:
#   gateways:
#   - istio-system/general-gateway
#   hosts:
#   - 'grafana.fredgentech.com'
#   http:
#   - retries:
#       attempts: 3
#       perTryTimeout: 2s
#     match:
#     - uri:
#         prefix: /
#     route:
#     - destination:
#         host: grafana.monitoring.svc.cluster.local
#         port:
#           number: 80

# ####This configuration below works when - --insecure flag is added to commands section of argocd-server deployment
# --- 
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: argocd
#   namespace: argocd
# spec:
#   gateways:
#     - istio-system/general-gateway
#   hosts:
#     - argocd.fredgentech.com
#   http:
#     - route:
#       - destination:
#           host: argocd-server
#           port:
#             number: 80




# Gitlab config

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
  name: minio-vs
  namespace: gitlab
spec:
  gateways:
  - istio-system/general-gateway
  hosts:
  - 'minio.fredgentech.com'
  http:
  - retries:
      attempts: 3
      perTryTimeout: 2s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: release-name-minio-svc.gitlab.svc.cluster.local
        port:
          number:  9000


---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: gitlab
spec:
  gateways:
    - istio-system/general-gateway
  hosts:
    - argocd.fredgentech.com
  http:
    - route:
      - destination:
          host: release-name-minio-svc
          port:
            number: 9000
